welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:7: error: type Yellow is not a member of object java.awt.Color
def faireV(c:Color.Yellow){
                   ^MethodsPicture:8: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	setCouleurBrosse();
                        ^